# DND_OS

./: .cproject  .project  CMakeLists-downloaded-GCC.txt  CMakeLists-repository-GCC.txt  CMakeLists.txt  README.md  build-repository-GCC.sh  build.bat  build.sh  fetch_profiles.py  guest_data.json  health_data.json  lv_conf.h  main.c
src/: add_char_logic.c  add_char_logic.h  character_logic.c  character_logic.h  health_tracker.c  health_tracker.h  profile_logic.c  profile_logic.h
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_numpad.c  ui_comp_numpad.h
ui/images/: ui_img_278415715.c  ui_img_arrow_png.c  ui_img_plus_png.c
ui/screens/: ui_CharChoiceScreen.c  ui_Health_Screen.c  ui_ProfileChoiceScreen.c  ui_SettingScreen.c  ui_WelcomeScreen.c
